# MyZipper

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  buildall.ps1  buildunzipper.ps1  buildzipinfo.ps1  buildzipper.ps1  compress.c  compress.h  concurrency.h  crc32.c  crc32.h  file.c  file.h  queue.c  queue.h  wrapper_functions.c  wrapper_functions.h  zip.h  zipper.c  zipper_file.c  zipper_file.h
compression/: compression.h
compression/no_compression/: no_compression.c
src/: CMakeLists.txt  concurrency.c  crc32.c  macros.h  queue.c  utils.c  utils.h  wrapper_functions.c  wrapper_functions.h  zip.c  zip.h
src/compression/: CMakeLists.txt  compression.h  concurrency.c  concurrency.h
src/compression/no_compression/: no_compression.c
src/unzipper/: CMakeLists.txt  unzipper.c
src/zip_info/: CMakeLists.txt  zip_info.c
src/zipper/: CMakeLists.txt  crc32.h  queue.c  zipper.c  zipper_file.c  zipper_file.h
src/zipper/compression/: compression.h
src/zipper/compression/no_compression/: no_compression.c
